<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:text="@string/personal"
      android:textSize="20sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editTextTextPersonName"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/name"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView" />

  <EditText
      android:id="@+id/editTextTextPersonName2"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/id"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

  <EditText
      android:id="@+id/editTextTextPersonName4"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/department"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.504"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/TextInputLayout" />

  <EditText
      android:id="@+id/editTextTextPersonName5"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/birth"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

  <EditText
      android:id="@+id/editTextTextPersonName6"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/phone"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

  <EditText
      android:id="@+id/editTextTextPersonName7"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      android:background="@drawable/input_box"
      android:backgroundTint="@color/light_white"
      android:ems="10"
      android:hint="@string/nid"
      android:inputType="textPersonName"
      android:textColorHint="@color/gray"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

  <Button
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:background="@drawable/button_box"
      android:backgroundTint="@color/green"
      android:text="Next"
      android:textSize="30sp"
      android:textStyle="bold"
      app:backgroundTint="@color/green"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName7"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName7" />

  <com.google.android.material.textfield.TextInputLayout
      app:startIconDrawable="@drawable/school"
      style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
      android:id="@+id/TextInputLayout"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="28dp"
      app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2">

    <AutoCompleteTextView
        android:id="@+id/School_list_Id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="none"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:popupBackground="@drawable/input_box"
        android:text="@string/school" />
  </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>